2006-05-21  Saso Kiselkov <skiselkov@gmail.com>

    * MenuletLoader.m:
    Allow loading menulets outside main bundle.

2006-05-16  Saso Kiselkov <skiselkov@gmail.com>

    * Subprojects/AboutEtoileEntry/AboutEtoileEntry.pmproj:
    * Subprojects/AboutEtoileEntry/GNUmakefile:
    * Subprojects/AboutEtoileEntry/GNUmakefile.preamble:
    * Subprojects/AboutEtoileEntry/GNUmakefile.postamble:
    * Subprojects/AboutEtoileEntry/AboutEtoileEntry.m:
    * Subprojects/AboutEtoileEntry/ETMachineInfo.h:
    * Subprojects/AboutEtoileEntry/ETMachineInfo.m:
    * Subprojects/AboutEtoileEntry/ETMachineInfo_Darwin.m:
    * Subprojects/AboutEtoileEntry/ETMachineInfo_FreeBSD.m:
    * Subprojects/AboutEtoileEntry/ETMachineInfo_Linux.m:
    * Subprojects/AboutEtoileEntry/ETMachineInfo_OpenBSD.m:
    * Subprojects/AboutEtoileEntry/TRSysctl.h:
    * Subprojects/AboutEtoileEntry/TRSysctlByName.h: Implemented changes
      to machine-info determining written by David Chrisnall.

2006-05-13  Saso Kiselkov <skiselkov@gmail.com>

    * MenuletLoader.m: Fixed a bug, pointed out by Chris B. Vetter, which
      was causing exceptions when a menulet failed to initialize properly.

2006-05-10  Saso Kiselkov <skiselkov@gmail.com>

    * Subprojects/AboutEtoileEntry/ScrollingImageView.m: Fixed
      text view centering issues.

2006-05-10  Saso Kiselkov <skiselkov@gmail.com>

    * Subprojects/AboutEtoileEntry/AboutEtoileEntry.m: Fixed bug
      preventing the CPU frequency to be displayed on FreeBSD.
    * Subprojects/AboutEtoileEntry/ScrollingImageView.m: Implemented
      some experimental slight performance improvements.

2006-05-09  Saso Kiselkov <skiselkov@gmail.com>

    * Subprojects/AboutEtoileEntry/AboutEtoileEntry.m: Stripped
      (R) and (tm) words from displayed CPU model names on Linux.
      Also added patch by Chris B. Vetter to do the same for
      FreeBSD.

2006-05-09  Saso Kiselkov <skiselkov@gmail.com>
    * Subprojects/AboutEtoileEntry/ScrollingImageView.m: Fixed